@@ -2,7 +2,6 @@
 # sync_dlg.py <Peter.Bienstman@UGent.be>
 #
 
-import sys
 from PyQt4 import QtCore, QtGui
 
 from mnemosyne.libmnemosyne.translator import _
@@ -47,8 +46,6 @@ class SyncThread(QtCore.QThread):
         self.port = port
         self.username = username
         self.password = password
-        # A fast moving progress bar seems to cause crashes on Windows.
-        self.show_numeric_progress_bar = (sys.platform != "win32")
                
     def run(self):
         self.mnemosyne.controller().sync(self.server, self.port,
@@ -72,16 +69,13 @@ class SyncThread(QtCore.QThread):
         self.set_progress_text_signal.emit(text)
         
     def set_progress_range(self, minimum, maximum):
-        if self.show_numeric_progress_bar:
-            self.set_progress_range_signal.emit(minimum, maximum)
+        self.set_progress_range_signal.emit(minimum, maximum)
         
     def set_progress_update_interval(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_update_interval_signal.emit(value)
+        self.set_progress_update_interval_signal.emit(value)
         
     def set_progress_value(self, value):
-        if self.show_numeric_progress_bar:
-            self.set_progress_value_signal.emit(value) 
+        self.set_progress_value_signal.emit(value) 
 
     def close_progress(self):
         self.close_progress_signal.emit()
